--- a/views/artist.erb
+++ b/views/artist.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="col-sm-8">
     <h1 class="text-right">
-      <a href="/artits/<%= @artist.mbid %>"><%= @artist.name %></a>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %>
+      <a href="/artists/<%= @artist.mbid %>"><%= @artist.name %></a>’s lively <%= params['year'].to_i > 0 ? params['year'] : 'history' %>
     </h1>
 
     <div class="stats">
